--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3656,7 +3656,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCuqTqok1m {
-  background-image: url("../../../assets/images/background45.jpg");
+  background-image: url("../../../assets/images/background410.jpg");
 }
 .cid-rCurmDdit5 {
   padding-top: 15px;
@@ -5565,7 +5565,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCA0xjRgfg {
-  background-image: url("../../../assets/images/background45.jpg");
+  background-image: url("../../../assets/images/background410.jpg");
 }
 .cid-rCA0xjRgfg H1 {
   text-align: center;
@@ -6890,7 +6890,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCCSEU8Lm8 {
-  background-image: url("../../../assets/images/background45.jpg");
+  background-image: url("../../../assets/images/background410.jpg");
 }
 .cid-rCCV9JdIBd {
   padding-top: 15px;
@@ -9201,7 +9201,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCFn8e2LwD {
-  background-image: url("../../../assets/images/background45.jpg");
+  background-image: url("../../../assets/images/background410.jpg");
 }
 .cid-rCFnGeprjX {
   padding-top: 15px;
@@ -10428,7 +10428,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rCUjPS03Nn {
-  background-image: url("../../../assets/images/background45.jpg");
+  background-image: url("../../../assets/images/background410.jpg");
 }
 .cid-rCUkh1SIzr {
   padding-top: 30px;
@@ -12051,33 +12051,7 @@ body {
   background-color: #2e2e2e;
 }
 .cid-rDZTmLyIRF {
-  background-image: url("../../../assets/images/background45.jpg");
-}
-.cid-rE08XPy8Lb {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-image: url("../../../assets/images/background4.jpg");
-}
-.cid-rE08VRfgdh {
-  background: #ffffff;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-.cid-rE08VRfgdh .image-block {
-  margin: auto;
-}
-.cid-rE08VRfgdh figcaption {
-  position: relative;
-}
-.cid-rE08VRfgdh figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-rE08VRfgdh .image-block {
-    width: 100% !important;
-  }
+  background-image: url("../../../assets/images/background410.jpg");
 }
 .cid-rE08WLv70b {
   padding-top: 30px;
@@ -12229,24 +12203,24 @@ body {
   padding-bottom: 0px;
   background-image: url("../../../assets/images/background4.jpg");
 }
-.cid-rE09psj4kI {
+.cid-rE3aaNuaIo {
   background: #ffffff;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 0px;
 }
-.cid-rE09psj4kI .image-block {
+.cid-rE3aaNuaIo .image-block {
   margin: auto;
 }
-.cid-rE09psj4kI figcaption {
+.cid-rE3aaNuaIo figcaption {
   position: relative;
 }
-.cid-rE09psj4kI figcaption div {
+.cid-rE3aaNuaIo figcaption div {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 @media (max-width: 768px) {
-  .cid-rE09psj4kI .image-block {
+  .cid-rE3aaNuaIo .image-block {
     width: 100% !important;
   }
 }
@@ -12568,19 +12542,16 @@ body {
 .cid-rDZU7DolMR .btn {
   margin: 0 0 .5rem 0;
 }
-.cid-rE2XLJZM7d {
-  background: #149dcc;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #149dcc, #ffffff);
+.cid-rE38WO6jn6 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
 }
-.cid-rE2XLJZM7d .video-block {
-  margin: auto;
+.cid-rE38WO6jn6 .mbr-section-subtitle {
+  color: #767676;
 }
-@media (max-width: 768px) {
-  .cid-rE2XLJZM7d .video-block {
-    width: 100% !important;
-  }
+.cid-rE38WO6jn6 .btn {
+  margin: 0 0 .5rem 0;
 }
 .cid-rDZTn91HSS {
   padding-top: 30px;
